// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopupSyncAuth > Disables submit button while loading > KeyStore.getKey() 1`] = `CryptoKey {}`;

exports[`PopupSyncAuth > Disables submit button while loading > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Disables submit button while loading > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Disables submit button while loading > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Disables submit button while loading > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Disables submit button while loading > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Disables submit button while loading > PersistentStorage.get('USERNAME') 1`] = `"d"`;

exports[`PopupSyncAuth > Disables submit button while loading > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
  [
    "request",
    {
      "calledWith": {
        "body": "{"username":"d","password":"1","notes":[],"deleted_notes":[]}",
        "headers": {
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
      "name": "/auth/login",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "d",
      },
      "name": "set_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "note": Note {
          "content": {
            "body": "",
            "delta": {
              "ops": [],
            },
            "title": "",
          },
          "timestamp": 0,
          "uuid": "uuid",
        },
      },
      "name": "new_note",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [
          Note {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "timestamp": 0,
            "uuid": "uuid",
          },
        ],
      },
      "name": "sync_local_notes",
    },
  ],
]
`;

exports[`PopupSyncAuth > Disables submit button while loading > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Disables submit button while loading > mockDb 1`] = `
{
  "deletedNotes": [],
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Disables submit button while loading > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    Note {
      "content": {
        "body": "",
        "delta": {
          "ops": [],
        },
        "title": "",
      },
      "timestamp": 0,
      "uuid": "uuid",
    },
  ],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Disables submit button while loading > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Disables submit button while loading > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Disables submit button while loading > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": true,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "d",
}
`;

exports[`PopupSyncAuth > Disables submit button while loading > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Emits close > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Emits close > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Emits close > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Emits close > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Emits close > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Emits close > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Emits close > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Emits close > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Emits close > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Emits close > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Mounts > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Mounts > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Mounts > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Mounts > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Mounts > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Mounts > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Shows default error message when none provided > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Shows default error message when none provided > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Shows default error message when none provided > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Shows default error message when none provided > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Shows default error message when none provided > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Shows default error message when none provided > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Shows default error message when none provided > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Shows default error message when none provided > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Shows default error message when none provided > syncState 1`] = `
{
  "appError": AppError {
    "code": 11,
    "display": {
      "form": true,
    },
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Shows default error message when none provided > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Shows error message > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Shows error message > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Shows error message > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Shows error message > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Shows error message > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Shows error message > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Shows error message > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Shows error message > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Shows error message > syncState 1`] = `
{
  "appError": AppError {
    "code": 11,
    "display": {
      "form": true,
    },
    "message": "Mock error",
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Shows error message > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Clears form validation errors > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > syncState 1`] = `
{
  "appError": AppError {
    "code": 11,
    "display": {
      "form": true,
      "sync": true,
    },
    "message": "Mock error",
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Retains sync errors > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
]
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncAuth > Switches between login/signup > Switches > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Validates fields > On login > KeyStore.getKey() 1`] = `CryptoKey {}`;

exports[`PopupSyncAuth > Validates fields > On login > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On login > PersistentStorage.get('USERNAME') 1`] = `"d"`;

exports[`PopupSyncAuth > Validates fields > On login > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
  [
    "request",
    {
      "calledWith": {
        "body": "{"username":"d","password":"1","notes":[],"deleted_notes":[]}",
        "headers": {
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
      "name": "/auth/login",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "d",
      },
      "name": "set_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "note": Note {
          "content": {
            "body": "",
            "delta": {
              "ops": [],
            },
            "title": "",
          },
          "timestamp": 0,
          "uuid": "uuid",
        },
      },
      "name": "new_note",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [
          Note {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "timestamp": 0,
            "uuid": "uuid",
          },
        ],
      },
      "name": "sync_local_notes",
    },
  ],
]
`;

exports[`PopupSyncAuth > Validates fields > On login > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Validates fields > On login > mockDb 1`] = `
{
  "deletedNotes": [],
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncAuth > Validates fields > On login > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    Note {
      "content": {
        "body": "",
        "delta": {
          "ops": [],
        },
        "title": "",
      },
      "timestamp": 0,
      "uuid": "uuid",
    },
  ],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Validates fields > On login > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Validates fields > On login > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Validates fields > On login > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": true,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "d",
}
`;

exports[`PopupSyncAuth > Validates fields > On login > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncAuth > Validates fields > On signup > KeyStore.getKey() 1`] = `CryptoKey {}`;

exports[`PopupSyncAuth > Validates fields > On signup > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > PersistentStorage.get('THEME') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncAuth > Validates fields > On signup > PersistentStorage.get('USERNAME') 1`] = `"k"`;

exports[`PopupSyncAuth > Validates fields > On signup > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
  [
    "listeners",
    {
      "name": "signup",
    },
  ],
  [
    "request",
    {
      "calledWith": {
        "body": "{"username":"k","password":"123456","notes":[]}",
        "headers": {
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
      "name": "/auth/signup",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "k",
      },
      "name": "set_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
]
`;

exports[`PopupSyncAuth > Validates fields > On signup > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncAuth > Validates fields > On signup > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
    "k": "123456",
  },
}
`;

exports[`PopupSyncAuth > Validates fields > On signup > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`PopupSyncAuth > Validates fields > On signup > openedPopup 1`] = `undefined`;

exports[`PopupSyncAuth > Validates fields > On signup > selectedTheme 1`] = `"System"`;

exports[`PopupSyncAuth > Validates fields > On signup > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": true,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "k",
}
`;

exports[`PopupSyncAuth > Validates fields > On signup > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
